# POS_JM

./: README.md
pos-jiaby/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
pos-jiaby/docs/: README.md  cdc-pos-jiaby-v2.md  manuel-utilisateur.md  plan-claude-code-pos-jiaby.md  pos_proto.py  test_scenarios.py
pos-jiaby/scripts/: backup.ps1  download-fonts.ps1  download-fonts.sh  smoke-tauri.cjs
pos-jiaby/scripts/import-historique/: index.ts  package.json
pos-jiaby/server/: drizzle.config.ts  index.ts  package-lock.json  package.json
pos-jiaby/server/db/: index.ts  schema.ts
pos-jiaby/src/: main.tsx
pos-jiaby/src-tauri/: Cargo.toml  tauri.conf.json
pos-jiaby/src-tauri/capabilities/: default.json
pos-jiaby/src-tauri/src/: lib.rs  main.rs
pos-jiaby/src/app/: App.tsx  globals.css  services.ts
pos-jiaby/src/components/: Badge.tsx  Kbd.tsx  Modal.tsx  MontantAr.tsx  NumPad.tsx  Pastille.tsx  SearchBox.tsx  index.ts
pos-jiaby/tests/domain/: auth.test.ts  cashup.test.ts  catalogueCsv.test.ts  finalize.test.ts  format.test.ts  ledger.test.ts  numbering.test.ts  pinHasher.test.ts  pmp.test.ts  pricing.test.ts  scenarios.test.ts  ticket.test.ts  velocity.test.ts
pos-jiaby/tests/e2e/: auth.spec.ts  caisse-avance.spec.ts  caisse.spec.ts  catalogue-import.spec.ts  catalogue.spec.ts  clients.spec.ts  coherence.spec.ts  helpers.ts  import-hard.spec.ts  rapports.spec.ts  reception.spec.ts  stock.spec.ts  suspension-retour.spec.ts  utilisateurs.spec.ts  vente.spec.ts
(+65 files in other folders)
