[package]
name = "pos-jiaby"
version = "0.1.0"
description = "JIABY POS — Point de vente"
authors = ["JIABY"]
edition = "2021"

[package.metadata]
# Tauri metadata

[package.metadata.tauri-winres]
# Windows resource — icon sera fourni en production

[lib]
name = "pos_jiaby_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.16"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
